haskell/Guestfs.hs


foreign import ccall unsafe "guestfs.h guestfs_btrfs_subvolume_get_default" c_btrfs_subvolume_get_default
  :: GuestfsP -> CString -> IO Int64

btrfs_subvolume_get_default :: GuestfsH -> String -> IO Int64
btrfs_subvolume_get_default h fs = do
  r <- withCString fs $ \fs -> withForeignPtr h (\p -> c_btrfs_subvolume_get_default p fs)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_btrfs_subvolume_set_default" c_btrfs_subvolume_set_default
  :: GuestfsP -> Int64 -> CString -> IO CInt

btrfs_subvolume_set_default :: GuestfsH -> Integer -> String -> IO ()
btrfs_subvolume_set_default h id fs = do
  r <- withCString fs $ \fs -> withForeignPtr h (\p -> c_btrfs_subvolume_set_default p (fromIntegral id) fs)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_subvolume_show" c_btrfs_subvolume_show
  :: GuestfsP -> CString -> IO (Ptr CString)

btrfs_subvolume_show :: GuestfsH -> String -> IO [(String, String)]
btrfs_subvolume_show h subvolume = do
  r <- withCString subvolume $ \subvolume -> withForeignPtr h (\p -> c_btrfs_subvolume_show p subvolume)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else do
      arr <- peekArray0 nullPtr r
      arr <- mapM peekCString arr
      return (assocListOfHashtable arr)

foreign import ccall unsafe "guestfs.h guestfs_btrfstune_enable_extended_inode_refs" c_btrfstune_enable_extended_inode_refs
  :: GuestfsP -> CString -> IO CInt

btrfstune_enable_extended_inode_refs :: GuestfsH -> String -> IO ()
btrfstune_enable_extended_inode_refs h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_btrfstune_enable_extended_inode_refs p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfstune_enable_skinny_metadata_extent_refs" c_btrfstune_enable_skinny_metadata_extent_refs
  :: GuestfsP -> CString -> IO CInt

btrfstune_enable_skinny_metadata_extent_refs :: GuestfsH -> String -> IO ()
btrfstune_enable_skinny_metadata_extent_refs h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_btrfstune_enable_skinny_metadata_extent_refs p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfstune_seeding" c_btrfstune_seeding
  :: GuestfsP -> CString -> CInt -> IO CInt

btrfstune_seeding :: GuestfsH -> String -> Bool -> IO ()
btrfstune_seeding h device seeding = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_btrfstune_seeding p device (fromBool seeding))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_c_pointer" c_c_pointer
  :: GuestfsP -> IO Int64

c_pointer :: GuestfsH -> IO Int64
c_pointer h = do
  r <- withForeignPtr h (\p -> c_c_pointer p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_canonical_device_name" c_canonical_device_name
  :: GuestfsP -> CString -> IO CString

canonical_device_name :: GuestfsH -> String -> IO String
canonical_device_name h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_canonical_device_name p device)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_cap_get_file" c_cap_get_file
  :: GuestfsP -> CString -> IO CString

cap_get_file :: GuestfsH -> String -> IO String
cap_get_file h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_cap_get_file p path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_cap_set_file" c_cap_set_file
  :: GuestfsP -> CString -> CString -> IO CInt

cap_set_file :: GuestfsH -> String -> String -> IO ()
cap_set_file h path cap = do
  r <- withCString path $ \path -> withCString cap $ \cap -> withForeignPtr h (\p -> c_cap_set_file p path cap)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_case_sensitive_path" c_case_sensitive_path
  :: GuestfsP -> CString -> IO CString

case_sensitive_path :: GuestfsH -> String -> IO String
case_sensitive_path h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_case_sensitive_path p path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_cat" c_cat
  :: GuestfsP -> CString -> IO CString

cat :: GuestfsH -> String -> IO String
cat h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_cat p path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_checksum" c_checksum
  :: GuestfsP -> CString -> CString -> IO CString

checksum :: GuestfsH -> String -> String -> IO String
checksum h csumtype path = do
  r <- withCString csumtype $ \csumtype -> withCString path $ \path -> withForeignPtr h (\p -> c_checksum p csumtype path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_checksum_device" c_checksum_device
  :: GuestfsP -> CString -> CString -> IO CString

checksum_device :: GuestfsH -> String -> String -> IO String
checksum_device h csumtype device = do
  r <- withCString csumtype $ \csumtype -> withCString device $ \device -> withForeignPtr h (\p -> c_checksum_device p csumtype device)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_checksums_out" c_checksums_out
  :: GuestfsP -> CString -> CString -> CString -> IO CInt

checksums_out :: GuestfsH -> String -> String -> String -> IO ()
checksums_out h csumtype directory sumsfile = do
  r <- withCString csumtype $ \csumtype -> withCString directory $ \directory -> withCString sumsfile $ \sumsfile -> withForeignPtr h (\p -> c_checksums_out p csumtype directory sumsfile)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_chmod" c_chmod
  :: GuestfsP -> CInt -> CString -> IO CInt

chmod :: GuestfsH -> Int -> String -> IO ()
chmod h mode path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_chmod p (fromIntegral mode) path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_chown" c_chown
  :: GuestfsP -> CInt -> CInt -> CString -> IO CInt

chown :: GuestfsH -> Int -> Int -> String -> IO ()
chown h owner group path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_chown p (fromIntegral owner) (fromIntegral group) path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_clear_backend_setting" c_clear_backend_setting
  :: GuestfsP -> CString -> IO CInt

clear_backend_setting :: GuestfsH -> String -> IO Int
clear_backend_setting h name = do
  r <- withCString name $ \name -> withForeignPtr h (\p -> c_clear_backend_setting p name)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_command" c_command
  :: GuestfsP -> Ptr CString -> IO CString

command :: GuestfsH -> [String] -> IO String
command h arguments = do
  r <- withMany withCString arguments $ \arguments -> withArray0 nullPtr arguments $ \arguments -> withForeignPtr h (\p -> c_command p arguments)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_command_lines" c_command_lines
  :: GuestfsP -> Ptr CString -> IO (Ptr CString)

command_lines :: GuestfsH -> [String] -> IO [String]
command_lines h arguments = do
  r <- withMany withCString arguments $ \arguments -> withArray0 nullPtr arguments $ \arguments -> withForeignPtr h (\p -> c_command_lines p arguments)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_config" c_config
  :: GuestfsP -> CString -> CString -> IO CInt

config :: GuestfsH -> String -> Maybe String -> IO ()
config h hvparam hvvalue = do
  r <- withCString hvparam $ \hvparam -> maybeWith withCString hvvalue $ \hvvalue -> withForeignPtr h (\p -> c_config p hvparam hvvalue)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_copy_in" c_copy_in
  :: GuestfsP -> CString -> CString -> IO CInt

copy_in :: GuestfsH -> String -> String -> IO ()
copy_in h localpath remotedir = do
  r <- withCString localpath $ \localpath -> withCString remotedir $ \remotedir -> withForeignPtr h (\p -> c_copy_in p localpath remotedir)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_copy_out" c_copy_out
  :: GuestfsP -> CString -> CString -> IO CInt

copy_out :: GuestfsH -> String -> String -> IO ()
copy_out h remotepath localdir = do
  r <- withCString remotepath $ \remotepath -> withCString localdir $ \localdir -> withForeignPtr h (\p -> c_copy_out p remotepath localdir)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_copy_size" c_copy_size
  :: GuestfsP -> CString -> CString -> Int64 -> IO CInt

copy_size :: GuestfsH -> String -> String -> Integer -> IO ()
copy_size h src dest size = do
  r <- withCString src $ \src -> withCString dest $ \dest -> withForeignPtr h (\p -> c_copy_size p src dest (fromIntegral size))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_cp" c_cp
  :: GuestfsP -> CString -> CString -> IO CInt

cp :: GuestfsH -> String -> String -> IO ()
cp h src dest = do
  r <- withCString src $ \src -> withCString dest $ \dest -> withForeignPtr h (\p -> c_cp p src dest)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_cp_a" c_cp_a
  :: GuestfsP -> CString -> CString -> IO CInt

cp_a :: GuestfsH -> String -> String -> IO ()
cp_a h src dest = do
  r <- withCString src $ \src -> withCString dest $ \dest -> withForeignPtr h (\p -> c_cp_a p src dest)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_cp_r" c_cp_r
  :: GuestfsP -> CString -> CString -> IO CInt

cp_r :: GuestfsH -> String -> String -> IO ()
cp_r h src dest = do
  r <- withCString src $ \src -> withCString dest $ \dest -> withForeignPtr h (\p -> c_cp_r p src dest)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_dd" c_dd
  :: GuestfsP -> CString -> CString -> IO CInt

dd :: GuestfsH -> String -> String -> IO ()
dd h src dest = do
  r <- withCString src $ \src -> withCString dest $ \dest -> withForeignPtr h (\p -> c_dd p src dest)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_debug" c_debug
  :: GuestfsP -> CString -> Ptr CString -> IO CString
